More CR comments

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript">
             window.location.href = "docs/overview"
         </script>
-        <title>YVM: Yarn Version Manager</title>
+        <title>with-immutable-props-to-js: 😈 A higher-order component for keeping Immutable objects outside your presentational components</title>
     </head>
     <body>
         If you are not redirected automatically, follow this <a href='docs/overview'>link</a>.
